<resources>
    <string name="app_name">Find Me In</string>
    <string name="child_name_ar">AR-Name: %s</string>
    <string name="child_name_en">EN-Name : %s</string>
    <string name="child_age">%s Years Old</string>
    <string name="child_age_more_than_10">%s Years Old</string>
    <string name="report_type">Report Type : %s</string>
    <string name="str_home">Home</string>
    <string name="str_about">About</string>
    <string name="str_instructions">Instructions</string>
    <string name="str_child_name_ar">Child Name In Arabic</string>
    <string name="str_skin_color">Skin Color</string>
    <string name="skin_color_value">Skin Color: %s</string>
    <string name="str_child_name_in_english">Child Name In English</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_age">Age</string>
    <string name="str_hair_color">Hair Color</string>
    <string name="hair_color_value">Hair Color: %s</string>
    <string name="str_eye_color">Eye Color</string>
    <string name="eye_color_value">Eye Color: %s</string>
    <string name="str_height">Height</string>
    <string name="str_child_missed_place">Place Where Child Was Lost</string>
    <string name="str_current_child_place">Current Child Place</string>
    <string name="str_name">Name</string>
    <string name="str_phone">Phone</string>
    <string name="str_address">Address</string>
    <string name="str_report_child">Report Child</string>
    <string name="str_not_required">Not Required</string>
    <string name="str_national_id">National ID</string>
    <string name="str_submit">Submit</string>
    <string name="str_child_information">Child Information</string>
    <string name="str_please_fill_all_fields_below">Please Fill all Fields Below</string>
    <string name="str_gender">Gender</string>
    <string name="str_color">Color</string>
    <string name="str_attach">Attach</string>
    <string name="str_attach_image">Attach Image</string>
    <string name="str_personal_info">Personal Info</string>
    <string name="str_skin">Skin</string>
    <string name="str_hair">Hair</string>
    <string name="str_eye">Eye</string>
    <string name="str_child_age">Child Age</string>
    <string name="str_child_height">Child Height</string>
    <string name="str_child_gender">Child Gender</string>
    <string name="str_child_place">Child Place</string>
    <string name="str_report_type">Report Type</string>
    <string name="str_reporter_name">Reporter Name</string>
    <string name="str_reporter_phone">Reporter Phone</string>
    <string name="str_reporter_address">Reporter Address</string>
    <string name="str_reporter_national_id">Reporter National Id</string>
    <string name="str_view_details">View Details</string>
    <string name="str_filter">Filter</string>
    <string name="str_basic_filters">Basic Filters</string>
    <string name="str_extra_filters">Extra Filters</string>
    <string name="str_color_filters">Color Filters</string>
    <string name="str_apply_filters">Apply Filters</string>
    <string name="str_reset">Reset</string>
    <string name="str_age_range">Age (%s , %s) Years</string>
    <string name="str_height_range">Height (%s , %s) Centimeter</string>
    <string name="str_about_us">About Us</string>
    <string name="str_loading">Loading…</string>
    <string name="str_something_wrong">Something Went wrong please try again later</string>
    <string name="str_api_error_msg">There is an error we are trying to fix it as soon as possible</string>
    <string name="str_network_error">Please Check Your NetWork</string>
    <string name="str_Ok">OK</string>
    <string name="str_error">Error</string>
    <string name="str_clear_filters">Clear All Filters</string>
    <string name="str_add_filters">Add Filters</string>
    <string name="str_missing">Missing</string>
    <string name="str_found">Found</string>
    <string name="str_call">Call</string>
    <string name="alert_report_type_message">What is the current status of child?</string>
    <string name="str_cancel">Cancel</string>
    <string name="toast_success_child_report">Child Reported Successfully</string>
    <string name="str_show_three_numbers">%s…</string>
    <string name="str_place_where_you_found_child">Place Where Child is Found</string>
    <string name="pref_default_instructions_value">App Instructions Well Be Here</string>
    <string name="str_view_link">View Link</string>
    <string name="intent_chooser_open_with">Open With</string>
    <string name="toast_no_more_data">No More Data To Show</string>
    <string name="str_current_filter">Current Filters</string>
    <string name="title_details_activity">Child Details</string>
    <string name="title_filter_activity">Filter Data</string>
    <string name="title_report_child_activity">Report New Child</string>
    <string name="title_home_fragment">Home</string>
    <string name="title_about_fragment">About</string>
    <string name="title_instruction_fragment">Instructions</string>
    <string name="no_filter_selected">No Filters Selected</string>
    <string name="str_error_correct_phone">Enter Correct Phone Number</string>
    <string name="str_error_national_id">National ID Should Contain 14 Digits</string>
    <string name="str_error_age">Age Must Be Less than or equal 20</string>
    <string name="str_error_height">Height range from 10 to 150</string>
    <string name="str_more">More</string>
    <string name="str_current_child_status">Current Child Status</string>
    <string name="str_no_data_show">No Data To Show</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_child">Child</string>
    <string name="str_about_us_value">Who we are ?\nWe are an ambitious team that seeks to social development by introducing creative solution for standing issues.
        \n\nWhat we offer ?\nWe Created <b><font color='#880e4f'>Find me in</font></b> app because we notice the lack of a platform that we can search and report for lost kids with the easiest possible way.
        \n\nThat\'s why we created <b><font color='#880e4f'>Find me in</font></b> app  that you will be able to search and report found or missing kids inside egypt , and you will be able to contact the reporter .
        \n\n<b>As our goal</b> is to Reunion missing kids with their parents by providing application that held Reported missing and found kids info Around Egypt
        \n\n<b>Our vision</b> is to be the best mobile app that provide an easy and safe way to search for lost kids in the country .
        \n\nWe are welcoming any Suggestions and complaints
        \n\nContact us via social pages
        Or via mobile number:
        +201100393130\n\nمن نحن؟\nنحن فريق شاب وطموح نسعى للتغيير المجتمعي عن طريق إيجاد حلول مبتكرة لمشاكل مستادمة
        \n\nماذا نقدم ؟\nلقد قمنا بتصميم تطبيق <b><font color='#880e4f'>إنجدني</font></b> لأننا لاحظنا عدم وجود منصة مناسبة ومتكاملة يمكن من خلالها البحث والإبلاغ عن الأطفال المفقودين والمعثور عليهم بأسهل طريقة ممكنة
        \n\nولذلك أنشأنا تطبيق <b><font color='#880e4f'>إنجدني</font></b> والذي سيمكنك من البحث بسهولة عن الأطفال المبلغ عنهم والتواصل مع  المبلغين مع إمكانية التبليغ عن أي حالات فقدان للأطفال بطريقة بسيطة وآمنة.
        \n\n<b>رؤيتنا</b> هي لم شمل الأسر مع أطفالهم المفقودين بطريقة بسيطه ومنظمة وآمنة عن طريق تطبيق <b><font color='#880e4f'>إنجدني</font></b> الذي يوفر معلومات عن الأطفال المفقودين والمعثور عليهم داخل مصر
        \n\n<b>هدفنا</b> هو أن نكون أفضل تطبيق رائد للبحث عن الأطفال المفقودين داخل البلاد بطريقة سهلة وآمنة
        \n\nنسعد بالشكاوى والمقترحات والتواصل عن طريق صفحاتنا على مواقع التواصل الإجتماعي
        أو عن طريق رقم الهاتف :
        +201100393130</string>
    <string name="str_social_pages">Social Pages</string>
    <string name="str_extra_info">Extra Info</string>
</resources>