<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver_light"
    android:orientation="vertical"
    tools:context=".activities.FilterActivity">

    <TextView
        style="@style/TextViewSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_basic_filters" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <TextView
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/str_report_type" />

        <RadioGroup
            android:id="@+id/rg_filter_report_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_filter_missing"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_filter_missing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_missing" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_filter_founded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_founded" />
        </RadioGroup>

        <TextView
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/str_gender" />

        <RadioGroup
            android:id="@+id/rg_filter_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_filter_male"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_filter_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_filter_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_female" />
        </RadioGroup>

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="8dp"
            android:background="@color/ghost" />

        <TextView
            android:id="@+id/tv_age_header"
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/str_age" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rs_filter_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="20"
            app:values="@array/initial_ranged_slider_values_age" />

        <TextView
            android:id="@+id/tv_height_header"
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/str_height" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rs_filter_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="200"
            app:values="@array/initial_ranged_slider_values_height" />
    </LinearLayout>

    <TextView
        style="@style/TextViewSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/str_color_filters" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_skin_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/str_skin">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/act_skin_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_hair_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/str_hair">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/act_hair_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_eye_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/str_eye">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/act_eye_color"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply_filters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_apply_filters" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/str_reset" />
    </LinearLayout>
</LinearLayout>