<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_filters_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                style="@style/TextViewMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_current_filter" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_filters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_report_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_clear"
                    tools:text="@string/str_report_type" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_clear"
                    tools:text="@string/str_gender" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_clear"
                    tools:text="@string/str_age" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_clear"
                    tools:text="@string/str_height" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_skin_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_clear"
                    tools:text="@string/str_skin_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_hair_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_clear"
                    tools:text="@string/str_hair_color" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_filter_eye_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:chipIcon="@drawable/ic_clear"
                    tools:text="@string/str_eye_color" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>

        <TextView
            style="@style/TextViewMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/str_children" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_home_list" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_report_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_add" />

</FrameLayout>
